alambert    2005/11/04 06:41:27 UTC	(20051104-3447)
  Log:
  XMLRPC: add atheme.account.get_metadata. not yet tested.

  Changes:	Modified:
  +48 -0	trunk/modules/xmlrpc/account.c (File Modified) 
  +48 -0	trunk/modules/xmlrpc/channel.c (File Modified) 


pfish       2005/11/04 00:55:48 UTC	(20051104-3445)
  Log:
  Let's be consistent with our wallops notifications.
  

  Changes:	Modified:
  +1 -1		trunk/modules/chanserv/drop.c (File Modified) 
  +1 -1		trunk/modules/nickserv/drop.c (File Modified) 
  +2 -2		trunk/modules/nickserv/resetpass.c (File Modified) 
  +1 -1		trunk/modules/userserv/drop.c (File Modified) 
  +2 -2		trunk/modules/userserv/resetpass.c (File Modified) 


jilles      2005/11/03 23:52:38 UTC	(20051103-3443)
  Log:
  Allow server notices and notices to channels in P10 protocol modules.
  

  Changes:	Modified:
  +7 -4		trunk/protocol/asuka.c (File Modified) 
  +7 -4		trunk/protocol/bircd.c (File Modified) 
  +7 -4		trunk/protocol/undernet.c (File Modified) 


jilles      2005/11/03 23:37:46 UTC	(20051103-3441)
  Log:
  Allow NULL target for floodcheck(). This will cause
  any warnings to be sent from services's server name.
  

  Changes:	Modified:
  +14 -7	trunk/src/ptasks.c (File Modified) 


jilles      2005/11/03 23:24:58 UTC	(20051103-3439)
  Log:
  Make notice(me.name, ...) work again for ratbox, charybdis and ircnet.
  

  Changes:	Modified:
  +6 -3		trunk/protocol/charybdis.c (File Modified) 
  +6 -3		trunk/protocol/ircnet.c (File Modified) 
  +6 -3		trunk/protocol/ratbox.c (File Modified) 


nenolod     2005/11/03 23:01:23 UTC	(20051103-3437)
  Log:
  Seed the random number generator so that systems with shitty hardware 
  don't generate predictable keys.
  

  Changes:	Modified:
  +2 -0		trunk/src/function.c (File Modified) 


jilles      2005/11/03 22:25:35 UTC	(20051103-3435)
  Log:
  general::secure can't be changed on rehash for now
  

  Changes:	Modified:
  +1 -1		trunk/dist/example.conf (File Modified) 